--- a/homeBR.html
+++ b/homeBR.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/logo L.png" type="image/x-icon">
-    <link rel="stylesheet" href="homeBR.css">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="homecellBR.css">
+    <link rel="stylesheet" href="style/homeBR.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="/style/homecellBR.css">
     <title>Luccas Costa</title>
 </head>
 <body>
@@ -239,6 +239,6 @@
 
     </div>
 
-    <script src="home.js"></script>
+    <script src="/scriptjs/home.js"></script>
 </body>
 </html>
