--- a/homeEUA.html
+++ b/homeEUA.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/logo L.png" type="image/x-icon">
-    <link rel="stylesheet" href="homeEUA.css">
+    <link rel="stylesheet" href="style/homeEUA.css">
     <title>Luccas Costa</title>
 </head>
 <body>
@@ -236,6 +236,6 @@
 
     </div>
 
-    <script src="home.js"></script>
+    <script src="/scriptjs/home.js"></script>
 </body>
 </html>
