--- a/homeBR.html
+++ b/homeBR.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/logo L.png" type="image/x-icon">
     <link rel="stylesheet" href="style/homeBR.css">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="/style/homecellBR.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="style/homecellBR.css">
     <title>Luccas Costa</title>
 </head>
 <body>
