--- a/homeBR.html
+++ b/homeBR.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/logo L.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="style/homeBR.css">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="style/homecellBR.css">
+    <link rel="stylesheet" href="style/cellBR.css">
     <title>Luccas Costa</title>
 </head>
 <body>
@@ -15,7 +16,9 @@
         <header id="headertop">
             <nav id="navigation">
                 <div id="container">
-                    <div id="logonav" ><img src="imagens/logo L.png" id="Hlogo" width=70px"></div>
+                    <div id="logonav" >
+                      <img src="imagens/logo L.png" id="Hlogo" width=70px">
+                    </div>
                     <div class="txtnav">
                         <span id="item1"><a href="#tdsection" class="nav">Sobre mim</a></span>
                         <span id="item2"><a href="#tdsection2" class="nav">Projetos</a></span>
@@ -28,9 +31,34 @@
             </nav>
         </header>
 
+        <!--*=================*-->
+        <!--*  media do cell  *-->
+        <!--*=================*-->
+
+        <header id="headertopcell">
+            <nav id="navigationcell">
+                <div id="containercell">
+                    <div id="logonavcell">
+                      <img src="imagens/logo L.png" id="Hlogo" width=70px">
+                    </div>
+                    <div id="menuburguer" onclick="clickMenu()">
+                      <a href="#" id="papo"><img src="imagens/menu_FILL0_wght300_GRAD200_opsz48.png" id="Blogo"></a>
+                    </div>
+                      <div id="itens">
+                        <div id="dentro">
+                          <div id="dentrododentro">
+                          </div>
+                        </div>
+                      </div>
+                </div>
+            </nav>
+        </header>
+
+        <!--*=================*-->
+
         <hr>
 
-        <main>
+        <main id="maintop">
           <div id="tdmain">
             <div id="txtmain">
                 <h1 id="ola">Olá, Me chamo <br> Luccas Costa</h1>
@@ -56,9 +84,34 @@
           </div>
         </main>
 
+        <!--*=================*-->
+        <!--*  media do cell  *-->
+        <!--*=================*-->
+
+        <main id="maintopcell">
+          <div id="tdmaincell">
+            <div id="txtmaincell">
+              <h1 id="olacell"><span id="txt1cell">Olá, Me chamo</span> <br> <span id="txt2cell">Luccas Costa</span></h1>
+                <div id="txtpmaincell">
+                  <p id="pcell">Desenvolvedor FrontEnd</p>
+                </div>
+                <div id="botoesnavcell">
+                  <div id="divbotaogit">
+                    <button id="botaogit">
+                        GitHub
+                    </button>
+                  </div>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </main>
+
+        <!--*=================*-->
+
         <hr>
 
-        <section>
+        <section id="sectiontop">
             <div id="tdsection">
                 <div id="sobremim">
                     <h1>Sobre mim</h1>
@@ -69,9 +122,26 @@
             </div>
         </section>
 
+        <!--*=================*-->
+        <!--*  media do cell  *-->
+        <!--*=================*-->
+        
+        <section id="sectiontopcell">
+          <div id="tdsectioncell">
+              <div id="sobremimcell">
+                  <h1 id="h1cell">Sobre mim</h1>
+                  <div id="txtsobremimcell">
+                      <p>Nascido na cidade de Carvalhopolis "MG" e criado no estados de São Paulo. <br> Desde pequeno sempre gostei de tecnologia e sempre tentei me manter atualizado.<br> Sou aquele tipo de pessoa que gosta de explorar e fuçar ao máximo a tecnologia que tenho nas minhas mãos e  sempre me perguntei como as coisas funcionam.</p>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+        <!--*=================*-->
+
         <hr id="h">
 
-        <article>
+        <article id="articletop">
             <div id="tdarticle">
                 <div id="espaco">
                     <div id="btredessociais1">
@@ -164,9 +234,110 @@
             </div>
         </article>
 
+        <!--*=================*-->
+        <!--*  media do cell  *-->
+        <!--*=================*-->
+
+
+
+        <article id="articletopcell">
+            <div id="tdarticlecell">
+                <div id="espacocell">
+                    <div id="btredessociais1">
+                        <span id="circle1"><a href="#"></a></span>
+                        <span id="circle2"><a href="#"></a></span>
+                        <span id="circle3"><a href="#"></a></span>
+                        <span id="circle4"><a href="#"></a></span>
+                    </div>
+                    <div id="btredessociais2">
+                        <span id="circle1"><a href="#"></a></span>
+                        <span id="circle2"><a href="#"></a></span>
+                        <span id="circle3"><a href="#"></a></span>
+                        <span id="circle4"><a href="#"></a></span>
+                    </div>
+                    <div id="btredessociais3">
+                        <span id="circle1"><a href="#"></a></span>
+                        <span id="circle2"><a href="#"></a></span>
+                        <span id="circle3"><a href="#"></a></span>
+                        <span id="circle4"><a href="#"></a></span>
+                    </div>
+                    <div id="btredessociais4">
+                        <span id="circle1"><a href="#"></a></span>
+                        <span id="circle2"><a href="#"></a></span>
+                        <span id="circle3"><a href="#"></a></span>
+                        <span id="circle4"><a href="#"></a></span>
+                    </div>
+                </div>
+                <div id="txtbolascell">
+                    <div id="bola1cell"><p id="paofcell">Gmail</p><p id="paocell">lucaspcosta70@gmail.com <button class="copy">
+                        <span data-text-end="Copied!" data-text-initial="clique para copiar" class="tooltip"></span>
+                        <span>
+                          <svg xml:space="preserve" style="enable-background:new 0 0 512 512" viewBox="0 0 6.35 6.35" y="0" x="0" height="20" width="20" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg" class="clipboard">
+                            <g>
+                              <path fill="currentColor" d="M2.43.265c-.3 0-.548.236-.573.53h-.328a.74.74 0 0 0-.735.734v3.822a.74.74 0 0 0 .735.734H4.82a.74.74 0 0 0 .735-.734V1.529a.74.74 0 0 0-.735-.735h-.328a.58.58 0 0 0-.573-.53zm0 .529h1.49c.032 0 .049.017.049.049v.431c0 .032-.017.049-.049.049H2.43c-.032 0-.05-.017-.05-.049V.843c0-.032.018-.05.05-.05zm-.901.53h.328c.026.292.274.528.573.528h1.49a.58.58 0 0 0 .573-.529h.328a.2.2 0 0 1 .206.206v3.822a.2.2 0 0 1-.206.205H1.53a.2.2 0 0 1-.206-.205V1.529a.2.2 0 0 1 .206-.206z"></path>
+                            </g>
+                          </svg>
+                          <svg xml:space="preserve" style="enable-background:new 0 0 512 512" viewBox="0 0 24 24" y="0" x="0" height="18" width="18" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg" class="checkmark">
+                            <g>
+                              <path data-original="#000000" fill="currentColor" d="M9.707 19.121a.997.997 0 0 1-1.414 0l-5.646-5.647a1.5 1.5 0 0 1 0-2.121l.707-.707a1.5 1.5 0 0 1 2.121 0L9 14.171l9.525-9.525a1.5 1.5 0 0 1 2.121 0l.707.707a1.5 1.5 0 0 1 0 2.121z"></path>
+                            </g>
+                          </svg>
+                        </span>
+                      </button></p></div>
+                    <div id="bola2cell"><p id="foapcell">Instagram</p><p id="oapcell">@l1uccas <button class="copy">
+                        <span data-text-end="Copied!" data-text-initial="Copy to clipboard" class="tooltip"></span>
+                        <span>
+                          <svg xml:space="preserve" style="enable-background:new 0 0 512 512" viewBox="0 0 6.35 6.35" y="0" x="0" height="20" width="20" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg" class="clipboard">
+                            <g>
+                              <path fill="currentColor" d="M2.43.265c-.3 0-.548.236-.573.53h-.328a.74.74 0 0 0-.735.734v3.822a.74.74 0 0 0 .735.734H4.82a.74.74 0 0 0 .735-.734V1.529a.74.74 0 0 0-.735-.735h-.328a.58.58 0 0 0-.573-.53zm0 .529h1.49c.032 0 .049.017.049.049v.431c0 .032-.017.049-.049.049H2.43c-.032 0-.05-.017-.05-.049V.843c0-.032.018-.05.05-.05zm-.901.53h.328c.026.292.274.528.573.528h1.49a.58.58 0 0 0 .573-.529h.328a.2.2 0 0 1 .206.206v3.822a.2.2 0 0 1-.206.205H1.53a.2.2 0 0 1-.206-.205V1.529a.2.2 0 0 1 .206-.206z"></path>
+                            </g>
+                          </svg>
+                          <svg xml:space="preserve" style="enable-background:new 0 0 512 512" viewBox="0 0 24 24" y="0" x="0" height="18" width="18" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg" class="checkmark">
+                            <g>
+                              <path data-original="#000000" fill="currentColor" d="M9.707 19.121a.997.997 0 0 1-1.414 0l-5.646-5.647a1.5 1.5 0 0 1 0-2.121l.707-.707a1.5 1.5 0 0 1 2.121 0L9 14.171l9.525-9.525a1.5 1.5 0 0 1 2.121 0l.707.707a1.5 1.5 0 0 1 0 2.121z"></path>
+                            </g>
+                          </svg>
+                        </span>
+                      </button></p></div>
+                    <div id="bola3cell"><p id="apfocell">Nome Completo</p><p id="apocell">Lucas Pereira Costa <button class="copy">
+                        <span data-text-end="Copied!" data-text-initial="Copy to clipboard" class="tooltip"></span>
+                        <span>
+                          <svg xml:space="preserve" style="enable-background:new 0 0 512 512" viewBox="0 0 6.35 6.35" y="0" x="0" height="20" width="20" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg" class="clipboard">
+                            <g>
+                              <path fill="currentColor" d="M2.43.265c-.3 0-.548.236-.573.53h-.328a.74.74 0 0 0-.735.734v3.822a.74.74 0 0 0 .735.734H4.82a.74.74 0 0 0 .735-.734V1.529a.74.74 0 0 0-.735-.735h-.328a.58.58 0 0 0-.573-.53zm0 .529h1.49c.032 0 .049.017.049.049v.431c0 .032-.017.049-.049.049H2.43c-.032 0-.05-.017-.05-.049V.843c0-.032.018-.05.05-.05zm-.901.53h.328c.026.292.274.528.573.528h1.49a.58.58 0 0 0 .573-.529h.328a.2.2 0 0 1 .206.206v3.822a.2.2 0 0 1-.206.205H1.53a.2.2 0 0 1-.206-.205V1.529a.2.2 0 0 1 .206-.206z"></path>
+                            </g>
+                          </svg>
+                          <svg xml:space="preserve" style="enable-background:new 0 0 512 512" viewBox="0 0 24 24" y="0" x="0" height="18" width="18" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg" class="checkmark">
+                            <g>
+                              <path data-original="#000000" fill="currentColor" d="M9.707 19.121a.997.997 0 0 1-1.414 0l-5.646-5.647a1.5 1.5 0 0 1 0-2.121l.707-.707a1.5 1.5 0 0 1 2.121 0L9 14.171l9.525-9.525a1.5 1.5 0 0 1 2.121 0l.707.707a1.5 1.5 0 0 1 0 2.121z"></path>
+                            </g>
+                          </svg>
+                        </span>
+                      </button></p></div>
+                    <div id="bola4cell"><p id="ofpacell">Celular</p><p id="opacell">(55) 12 99610-0607 <button class="copy">
+                        <span data-text-end="Copied!" data-text-initial="Copy to clipboard" class="tooltip"></span>
+                        <span>
+                          <svg xml:space="preserve" style="enable-background:new 0 0 512 512" viewBox="0 0 6.35 6.35" y="0" x="0" height="20" width="20" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg" class="clipboard">
+                            <g>
+                              <path fill="currentColor" d="M2.43.265c-.3 0-.548.236-.573.53h-.328a.74.74 0 0 0-.735.734v3.822a.74.74 0 0 0 .735.734H4.82a.74.74 0 0 0 .735-.734V1.529a.74.74 0 0 0-.735-.735h-.328a.58.58 0 0 0-.573-.53zm0 .529h1.49c.032 0 .049.017.049.049v.431c0 .032-.017.049-.049.049H2.43c-.032 0-.05-.017-.05-.049V.843c0-.032.018-.05.05-.05zm-.901.53h.328c.026.292.274.528.573.528h1.49a.58.58 0 0 0 .573-.529h.328a.2.2 0 0 1 .206.206v3.822a.2.2 0 0 1-.206.205H1.53a.2.2 0 0 1-.206-.205V1.529a.2.2 0 0 1 .206-.206z"></path>
+                            </g>
+                          </svg>
+                          <svg xml:space="preserve" style="enable-background:new 0 0 512 512" viewBox="0 0 24 24" y="0" x="0" height="18" width="18" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg" class="checkmark">
+                            <g>
+                              <path data-original="#000000" fill="currentColor" d="M9.707 19.121a.997.997 0 0 1-1.414 0l-5.646-5.647a1.5 1.5 0 0 1 0-2.121l.707-.707a1.5 1.5 0 0 1 2.121 0L9 14.171l9.525-9.525a1.5 1.5 0 0 1 2.121 0l.707.707a1.5 1.5 0 0 1 0 2.121z"></path>
+                            </g>
+                          </svg>
+                        </span>
+                      </button></p></div>
+                </div>
+            </div>
+        </article>
+
+        <!--*=================*-->
+
         <hr>
 
-        <section>
+        <section id="sectiondown">
             <div id="tdsection2">
                 <div id="oqueeufaço">
                     <div id="txtoqueeufaço">
@@ -192,9 +363,41 @@
             </div>
         </section>
 
+        <!--*=================*-->
+        <!--*  media do cell  *-->
+        <!--*=================*-->
+
+        <section id="sectiondowncell">
+          <div id="tdsection2cell">
+              <div id="oqueeufaçocell">
+                  <div id="txtoqueeufaçocell">
+                      <div id="oefcell">
+                          <h1>Oque eu faço?</h1>
+                      </div>
+                      <div id="boxoqueeufaçocell">
+                          <div id="box1">
+                              <img src="imagens/icon1.png" id="box1img">
+                              <p id="box1p">Software Development</p>
+                          </div>
+                          <div id="box2">
+                              <img src="imagens/icon2.png" id="box2img">
+                              <p id="box2p">Web Development</p>
+                          </div>
+                          <div id="box3">
+                              <img src="imagens/icon3.png" id="box3img">
+                              <p id="box3p">Web Disign</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+        <!--*=================*-->
+
         <hr id="j">
 
-        <section>
+        <section id="section2down">
             <div id="tdsection3">
                 <div id="minhashabilidades">
                     <div id="txtminhashabilidades">
@@ -220,21 +423,85 @@
 
         <a href="#" class="btn"></a>
 
-        <hr id="k">
+        <!--*=================*-->
+        <!--*  media do cell  *-->
+        <!--*=================*-->
 
-        <section>
-            <div id="questionario">
-                <div>
-                    <button id="botaoctt" onclick="paginaloginBR()"><span id="txtactt">Contate-me</span></button>
-                </div>
-            </div>
-        </section>
+        <section id="section2downcell">
+          <div id="tdsection3cell">
+            <div id="tdsection3cellon">
+            <div id="minhashabilidadescell">
+                  <div id="txtminhashabilidadescell">
+                      <h1 id="mhcell">Minhas habilidades</h1>
+                  </div>
+                  <div id="boxmhcell">
+                      <div id="box1mhcell">
+                          <img src="imagens/html5.png" id="html5cell" width="150px">
+                          <p id="htmlcell">HTML</p>
+                      </div>
+                      <div id="box2mhcell">
+                          <img src="imagens/css3.png" id="css3cell" width="150px">
+                          <p id="csscell">CSS</p>
+                      </div>
+                      <div id="box3mhcell">
+                          <img src="imagens/js.png" id="js3cell" width="150px">
+                          <p id="jscell">JavaScript</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          </div>
+      </section>
 
-        <footer>
-            <div id="rodape">
-                <span id="txtrodape">©luccascosta - Todos os direitos reservados</span>
+      <a href="#" class="btn"></a>
+
+        <!--*=================*-->
+
+
+      <hr id="k">
+
+      <section id="sectionbutton">
+          <div id="questionario">
+              <div>
+                  <button id="botaoctt" onclick="paginaloginBR()"><span id="txtactt">Contate-me</span></button>
+              </div>
+          </div>
+      </section>
+
+      <!--*=================*-->
+      <!--*  media do cell  *-->
+      <!--*=================*-->
+
+      <section id="sectionbuttoncell">
+        <div id="questionariocell">
+            <div>
+                <button id="botaoctt" onclick="paginaloginBR()"><span id="txtactt">Contate-me</span></button>
             </div>
-        </footer>
+        </div>
+    </section>
+
+
+      <!--*=================*-->
+
+
+      <footer id="footer">
+          <div id="rodape">
+              <span id="txtrodape">©luccascosta - Todos os direitos reservados</span>
+          </div>
+      </footer>
+
+      <!--*=================*-->
+      <!--*  media do cell  *-->
+      <!--*=================*-->
+
+      <footer id="footercell">
+        <div id="rodape">
+            <span id="txtrodape">©luccascosta - Todos os direitos reservados</span>
+        </div>
+      </footer>
+
+      <!--*=================*-->
+
 
 
     </div>
