--- a/homeBR.html
+++ b/homeBR.html
@@ -41,12 +41,23 @@
                     <div id="logonavcell">
                       <img src="imagens/logo L.png" id="Hlogo" width=70px">
                     </div>
-                    <div id="menuburguer" onclick="clickMenu()">
-                      <a href="#" id="papo"><img src="imagens/menu_FILL0_wght300_GRAD200_opsz48.png" id="Blogo"></a>
+                    <div id="menuburguer">
+                      <div id="menu-bar" onclick="menuOnClick()">
+                        <div id="bar1" class="bar"></div>
+                        <div id="bar2" class="bar"></div>
+                        <div id="bar3" class="bar"></div>
+                      </div>
+                      <nav class="navburguer" id="nav">
+                        <ul>
+                          <li><a href="#">Sobre</a></li>
+                          <li><a href="#">Projetos</a></li>
+                          <li id="li03"><a href="#">Contate-me</a></li>
+                        </ul>
+                        <a href="homeEUA.html" id="EUAAAAA"><img src="imagens/brandeiraeua.webp"></a>
+                      </nav> 
                     </div>
-                      <div id="itens">
-                        <div id="dentro">
-                          <div id="dentrododentro">
+
+                    <div class="menu-bg" id="menu-bg"></div>
                           </div>
                         </div>
                       </div>
@@ -506,6 +517,6 @@
 
     </div>
 
-    <script src="/scriptjs/home.js"></script>
+    <script src="scriptjs/home.js"></script>
 </body>
 </html>
