--- a/homeBR.html
+++ b/homeBR.html
@@ -71,6 +71,9 @@
         <main id="maintop">
           <div id="tdmain">
             <div id="txtmain">
+                <div class="saldacao">
+                  <h2 id="saldacao">Bom dia</h2>
+                </div>
                 <h1 id="ola">Olá, Me chamo <br> Luccas Costa</h1>
                   <div id="txtpmain">
                     <p>Desenvolvedor FrontEnd</p>
